[package]
name = "tantivy-pinyin"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["tantivy", "pinyin"]
description = "Just like the name, this is a pinyin tokenizer of tantivy."
repository = "https://github.com/tu6ge/tantivy-pinyin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
defalut = []
stop_words = []

[dependencies]
tantivy = {version = "^0.18"}
pinyin = "^0.9"
utf8_slice = "^1"

[dev-dependencies]
tempfile = "3.3.0"
